@@ -9,6 +9,7 @@
  - perl-functions.eclass included in eclass report
  - virtual/perl-* data included in installed package report
  - use Config.pm instead of looping `perl -V:fieldname`
+ - Internals restructured and all real logic relocated to Gentoo::App::PerlInfo
 
 0.16 - 2010-11-03
  - Remove perl-post.eclass from reported eclass list
